# llm_engine

./: README.md  config.py  engine.py  prompts.py  pyproject.toml  requirements.txt
llm_engine/: config.py  engine.py  parser.py
llm_engine/models/: models.yaml
models/: models.yaml
tests/: test_config.py  test_engine.py
