[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm_engine"
version = "0.1.0"
description = "LLM engine"
authors = ["CannyLab <mkang@cs.berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.102.0"
PyYAML = "6.0.2"
tqdm = "4.67.1"
transformers = ">=4.55.2"
vllm = "0.10.2"
# vLLM 0.10.2 pins Torch 2.8.0 for compatibility
torch = "2.8.0"
