[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm_engine"
version = "0.1.0"
description = "LLM engine"
authors = ["CannyLab <mkang@cs.berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "2.33.0"
PyYAML = "6.0.2"
tqdm = "4.67.1"
transformers = "4.56.0"
vllm = "0.20.0"
# vLLM 0.20.0 pins the Torch package family for compatibility
torch = "2.11.0"
torchaudio = "2.11.0"
torchvision = "0.26.0"
